Handling app closing  and database connection issues

--- a/src/messages_en.properties
+++ b/src/messages_en.properties
@@ -37,6 +37,9 @@ message.delete.failure=Failure deleting data.
 message.title.success=Success
 message.title.failure=Failure
 
+db.connection.error=Unable to connect to database!\nPlease check MySQL and connection configuration.
+db.connection.title_error=Database Connection Error
+
 db.table.buses=Bus
 db.table.bus_operators=Bus Operator
 db.table.routes=Route
