Add search functionality with suggestions

--- a/src/messages_en.properties
+++ b/src/messages_en.properties
@@ -33,6 +33,7 @@ message.delete.success=Data deleted successfully.
 message.insert.failure=Failure inserting data.
 message.update.failure=Failure updating data.
 message.delete.failure=Failure deleting data.
+message.search.criteria.empty=Search criteria cannot be empty.
 
 message.title.success=Success
 message.title.failure=Failure
