Refactor controllers and table loaders to implement search functionality

--- a/src/messages_en.properties
+++ b/src/messages_en.properties
@@ -37,6 +37,7 @@ message.search.criteria.empty=Search criteria cannot be empty.
 
 message.title.success=Success
 message.title.failure=Failure
+message.title.error=Error
 
 db.connection.error=Unable to connect to database!\nPlease check MySQL and connection configuration.
 db.connection.title_error=Database Connection Error
